Bug 274679 - "Delete _folders_ after completion": "folder" should be in singular
Summary: "Delete _folders_ after completion": "folder" should be in singular
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-01 13:15 UTC by Alexander Potashev
Modified: 2012-02-27 12:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2011-06-01 13:15:45 UTC
Version:           Git (master) (using KDE 4.6.3) 
OS:                Linux

When you click to archive a mail folder, you get a dialog with a checkbox "&Delete folders after completion". It is possible to archive only one folder at once in KMail (however I might be wrong), so it should be "&Delete _folder_ after completion".

Reproducible: Always
Comment 1 Laurent Montel 2011-06-02 22:18:08 UTC
No it's not right we can archive current folder and subfolders.
Regards.
Comment 2 Alexander Potashev 2011-06-02 22:27:29 UTC
Doesn't removing a folder also mean removing all subfolders?
Comment 3 Laurent Montel 2012-02-27 12:49:24 UTC
Git commit 8e1cb7036be5968cb4c1d041d652eda41a2c9cdb by Montel Laurent.
Committed on 27/02/2012 at 13:48.
Pushed by mlaurent into branch 'master'.

Fix Bug 274679 - "Delete _folders_ after completion": "folder" should be in singular

Inform that it will delete folder and all subfolders

FIXED-IN: 4.9

M  +1    -1    kmail/archivefolderdialog.cpp

http://commits.kde.org/kdepim/8e1cb7036be5968cb4c1d041d652eda41a2c9cdb