Fix Bug 274679 - "Delete _folders_ after completion": "folder" should be in singular

Inform that it will delete folder and all subfolders

FIXED-IN: 4.9
BUG: 274679